# Mediculture

./: Architecture.drawio  Databese_schema.drawio  Enterprise.drawio  README.md  Tech_Stack.drawio  firebase.json  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
docs/main/: README.md  SUMMARY.md
docs/main/components/: ai-integration-possibility.md  medical-community-and-forums.md  tri-delivery-system.md
docs/main/getting-started/: members.md  milestone-timeline.md  technology-stacks.md
docs/main/technology-stacks/: ai-framework.md  backend.md  core-idea.md  drone-systems.md  frontend.md  (+1 more)
doctor_application/: main.py  pyproject.toml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: custom_app_bar.dart  floating_bottom_bar.dart  floating_search_bar.dart  neomorphic_button.dart  reminder_card.dart  sos_button.dart
lib/models/: user_model.dart
lib/screens/: appointment_screen.dart  community_screen.dart  home_screen.dart  medicine_screen.dart  settings_screen.dart
lib/services/: auth_service.dart
macos/Runner.xcodeproj/: project.pbxproj
medicult-db/: .env  output.txt  server.js
shopkeeper_portal/: .env.example  API_INTEGRATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
shopkeeper_portal/src/: index.css
test/: widget_test.dart
user_application/: pubspec.yaml
user_application/lib/: firebase_options.dart  main.dart
user_application/linux/: CMakeLists.txt
user_application/web/: manifest.json
web/: index.html
windows/: CMakeLists.txt
windows/runner/: main.cpp
(+37 files in other folders)
