[project]
name = "doctor-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web UI Framework
    "streamlit>=1.28.0",
    "streamlit-option-menu>=0.3.6",
    "streamlit-authenticator>=0.2.3",
    
    # Data handling
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "python-dateutil>=2.8.2",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "plotly>=5.17.0",
]